--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,2 +1,4 @@
-@import (once) './base/index';
-@import (once) './fonts/iconfont.css';
+@import 'slcss/less/index';
+@import 'slcss/less/reset/index';
+@import (once) './antd';
+@import (once) './common';
