--- a/src/pages/Layouts/index.less
+++ b/src/pages/Layouts/index.less
@@ -1,58 +1,28 @@
-@import 'styles/base/skin';
+@import 'styles/skin';
 
 .Layouts_wrap {
-  width: 100%;
-  height: 100%;
-  > div {
+  >div {
     height: 100%;
   }
   .left {
-    float: left;
     width: 240px;
-    background-color: @themeColor;
     .logo {
       width: 239px;
-      height: 60px;
       box-shadow: 0 3px 3px #363e4f;
-      text-align: center;
-      display: table-cell;
-      vertical-align: middle;
-      img {
-        width: 85%;
-        margin-left: 10px;
-      }
     }
   }
   .right {
-    overflow: hidden;
     .header {
-      height: 60px;
       box-shadow: 0 2px 5px #e4e4e4;
-      position: relative;
       .user {
-        font-size: 14px;
         width: 130px;
-        height: 100%;
         color: @textColor_Light;
-        float: right;
         text-indent: 2rem;
         line-height: 60px;
-        .name {
-          cursor: pointer;
-        }
-        .font {
-          margin-right: 5px;
-        }
-        .ant-popover-open {
-          span {
-            font-size: 14px;
-          }
-        }
-
       }
     }
     .routeWrap {
-      height: 100%;
+      height: calc(100% - 60px);
       padding: 10px 0px 0px 10px;
     }
   }
