feat: Some optimizations

--- a/src/pages/Layouts/index.less
+++ b/src/pages/Layouts/index.less
@@ -16,7 +16,7 @@
       box-shadow: 0 2px 5px #e4e4e4;
       .user {
         width: 130px;
-        color: @textColor_Light;
+        color: @c-light;
         text-indent: 2rem;
         line-height: 60px;
       }
