--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -11,11 +11,11 @@
 
 .ant-btn-primary {
   &:hover {
-    background-color: @themeColor !important;
+    background-color: @c-theme !important;
     opacity: .88 !important;
   }
   &:focus {
-    background-color: @themeColor !important;
+    background-color: @c-theme !important;
   }
 }
 
