--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -1,29 +1,20 @@
 @import './skin';
 
+html {
+  color: @c-theme;
+}
 .bgc-theme {
-  background-color: @themeColor;
+  background-color: @c-theme;
 }
 .bgc-white {
   background-color: #fff;
 }
-
 .c-theme {
-  color: @themeColor;
+  color: @c-theme;
 }
-
 .m-auto {
   margin: 0 auto !important;
 }
-
 .w85p {
   width: 85%;
-}
-
-.P_auto {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
 }
