--- a/src/styles/skin.less
+++ b/src/styles/skin.less
@@ -1,7 +1,5 @@
-@themeColor: #495060;
-
-@textColor: #282C32;
-@textColor_Light: #9ba1ae;
+@c-theme: #495060;
+@c-light: #9ba1ae;
 
 @scrollBar: #c1c1c1;
 @scrollBar_Under: #f1f1f1;
